tdf#103158: Only pass modkey event on key release

Revert small part of 74407aef94b6d8dfdd69891c4a6e578587ef3e71

Change-Id: If5aa11dd1bffe2de908413606a140d487165ad1a